# anime-game-afk

./: .gitignore  .watchdog-prompt.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/get-shit-done/references/: artifact-types.md  decimal-phase-calculation.md  git-integration.md  git-planning-commit.md  model-profile-resolution.md  phase-argument-parsing.md  planner-revision.md  planning-config.md  verification-patterns.md
.claude/get-shit-done/templates/: phase-prompt.md
.claude/get-shit-done/workflows/: add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  diagnose-issues.md  discovery-phase.md  discuss-phase-assumptions.md  discuss-phase.md  do.md  docs-update.md  execute-phase.md  execute-plan.md  health.md  help.md  insert-phase.md  list-workspaces.md  manager.md  map-codebase.md  new-milestone.md  new-project.md  new-workspace.md  next.md  note.md  pause-work.md  progress.md  (+21 more)
config/: default_config.yaml  settings.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
src/game_scheduler/: __init__.py  config_manager.py  dag_executor.py  models.py  post_actions.py  run_manager.py  scheduler.py
src/gs/: __init__.py
(+56 files in other folders)
